# PriceTune

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  gunicorn_conf.py  pyproject.toml
app/config/: config.py  settings.py  urls.py
app/config/components/: apps.py  databases.py  simpleui.py
app/product/: admin.py  models.py  telegram_bot.py  utils.py
app/product/migrations/: 0001_initial.py  0002_groupproduct_level_groupproduct_lft_and_more.py  0003_alter_groupproduct_idx_alter_product_group.py
app/product/templates/admin/product/: change_form_product.html
config/: config.py
config/components/: internationalization.py
envs/: .env.dev  .env.docker.nginx.dev  .env.docker.postgres.dev
nginx/: Dockerfile  entrypoint.sh  nginx.conf  nginx.template.conf
nginx/ssl/: server.crt  server.key
